# sgd_a_star

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
.github/workflows/: release.yml
include/: node.hpp  route.hpp  users.hpp  utils.hpp
include/sgd_a_star/: a_star.hpp  route.hpp
maps/: 0_users.xml  a_star_test_meshed.nav  lohmuehlenpark.nav
src/: CMakeLists.txt  a_star.cpp  main.cpp  node.cpp  route.cpp  users.cpp  utils.cpp
test/: CMakeLists.txt  unit_test_utils.cpp
